tests/e2e/time_values_invalid8.error
Error: syntax error in story at line 1, column 5

1|    a = 5h2h
          ^^^^

E0069: Time value duplication: `h` must only occur once
